--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,7 +6,8 @@ pyspark
 requests
 python-dotenv
 minio
-apache-airflow
+apache-airflow[postgres]
 apache-airflow-providers-apache-spark
 streamlit
 s3fs
+pendulum
