--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,15 @@ version: '3.9'
 
 
 x-spark-common: &spark-common
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
-    command: [ "bash", "-c", "mkdir -p /data && /usr/local/bin/spark-minio-entrypoint.sh" ]
+  build:
+    context: .
+    dockerfile: Dockerfile
+  env_file:
+    - .env
+  environment:
+    - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+    - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+  command: [ "bash", "-c", "mkdir -p /data && /usr/local/bin/spark-minio-entrypoint.sh" ]
 
 x-airflow-common: &airflow-common
   build:
@@ -16,6 +18,7 @@ x-airflow-common: &airflow-common
     dockerfile: Dockerfile
   env_file:
     - airflow.env
+    - .env
   environment:
     - MINIO_ROOT_USER=${MINIO_ROOT_USER}
     - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
@@ -44,6 +47,7 @@ services:
       - "7077:7077"
 
   worker1:
+    <<: *spark-common
     container_name: worker1
     environment:
       - SPARK_MODE=worker
@@ -58,6 +62,7 @@ services:
       - "9001:9001"
 
   spark-history-server:
+    <<: *spark-common
     container_name: spark-history-server
     environment:
       - SPARK_MODE=history
@@ -73,9 +78,9 @@ services:
   postgres:
       image: postgres:14.0
       environment:
-        - POSTGRES_USER=airflow
-        - POSTGRES_PASSWORD=airflow
-        - POSTGRES_DB=airflow
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_DB=${POSTGRES_DB}
       networks:
         net-transactions:
           ipv4_address: 192.168.2.103
